--- a/index.html
+++ b/index.html
@@ -218,32 +218,40 @@
                  </div>
                     <div class="rows">
                         <div class="unordered-list">
-                            <li>Legal</li>
-                            <li>Terms and Conditions</li>
-                            <li>Privacy Policy</li>
-                            <li>Disclaimer</li>
-                            <li>Caution Notice</li>
+                            <h3 class="ul-heading">Legal</h3>
+                            <ul>
+                            <li class="li"><a href=""> Terms and Conditions</a></li>
+                            <li class="li"><a href=""> Privacy Policy</a></li>
+                            <li class="li"><a href=""> Disclaimer</a></li>
+                            <li class="li"><a href=""> Caution Notice</a></li>
+                            </ul>
                         </div>
                         <div class="unordered-list">
-                            <li>KFC India</li>
-                            <li>About KFC</li>
-                            <li>KFC Care</li>
-                            <li>Careers</li>
-                            <li>Our Golden Past</li>
+                            <h3 class="ul-heading">KFC India</h3>
+                            <ul>
+                            <li class="li"><a href="">About KFC</a> </li>
+                            <li class="li"><a href=""> KFC Care</a></li>
+                            <li class="li"><a href="">Careers</a> </li>
+                            <li class="li"><a href=""> Our Golden Past</a></li>
+                            </ul>
                         </div>
                         <div class="unordered-list">
-                            <li>KFC Food</li>
-                            <li>Menu</li>
-                            <li>Order Lookup</li>
-                            <li>Gift Card</li>
-                            <li>Nutrition & Allergen</li>
+                            <h3 class="ul-heading">KFC Food</h3>
+                            <ul>
+                            <li class="li"><a href=""> Menu</a></li>
+                            <li class="li"><a href=""> Order Lookup</a></li>
+                            <li class="li"><a href=""> Gift Card</a></li>
+                            <li class="li"><a href=""> Nutrition & Allergen</a></li>
+                            </ul>
                         </div>
                         <div class="unordered-list">
-                            <li>Support</li>
-                            <li>Get Help</li>
-                            <li>Contact Us</li>
-                            <li>KFC Feedback</li>
-                            <li>Privacy Policy</li>
+                            <h3 class="ul-heading">Support</h3>
+                            <ul>
+                            <li class="li"><a href=""> Get Help </a></li>
+                            <li class="li"><a href=""> Contact Us</a></li>
+                            <li class="li"><a href=""> KFC Feedback</a></li>
+                            <li class="li"><a href=""> Privacy Policy</a></li>
+                            </ul>
                         </div>
                     </div>
                     <div class="find-kfc">
