--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Yantramanav:wght@900&display=swap" rel="stylesheet">
-<link rel="icon" href="/download.png" type="image/icon type">
+<link rel="icon" href="images/jtaljmqt7kjim6vt5hiq.webp" type="image/icon type">
 </head>
 <link rel="stylesheet" href="style.css" type="text/css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,17 +33,17 @@
         <div class="second-header">
 
             <div class="left-side-header">
-                <img src="kfcLogo.492728c6.svg" class="kfclogo" alt="">
+                <img src="images/kfcLogo.492728c6.svg" class="kfclogo" alt="">
                 <a href="" class="menu">Menu</a>
                 <a href="" class="deals">Deals</a>
             </div>
 
             <div class="right-side-header">
-                <img src="Account_Icon.svg" class="accounticon" alt="">
+                <img src="images/Account_Icon.svg" class="accounticon" alt="">
                 <a href="" class="signin">Sign In</a>
                 <div class="vr"></div>
                 <i class="fa fa-inr">0</i>
-                <img src="bucket_cart_icon.svg" class="bucket-icon" alt="">
+                <img src="images/bucket_cart_icon.svg" class="bucket-icon" alt="">
             </div>
 
         </div>
@@ -83,29 +83,29 @@
             <div class="cat-pictures">
 
                 <div class="gallery">
-                    <a class="links" href="LEGPIECE.jpg">
-                        <img src="LEGPIECE.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/LEGPIECE.jpg">
+                        <img src="images/LEGPIECE.jpg" alt="" width="1px" class="image">
                         <div class="desc">LEG PIECE BUCKET OFFER</div>
                     </a>
                 </div>
 
                 <div class="gallery">
-                    <a class="links" href="PERIPERI.jpg">
-                        <img src="PERIPERI.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/PERIPERI.jpg">
+                        <img src="images/PERIPERI.jpg" alt="" width="1px" class="image">
                         <div class="desc">PERI PERI MATCH SPECIALS</div>
                     </a>
                 </div>
 
                 <div class="gallery">
-                    <a class="links" href="CHICKENROLL.jpg">
-                        <img src="CHICKENROLL.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/CHICKENROLL.jpg">
+                        <img src="images/CHICKENROLL.jpg" alt="" width="1px" class="image">
                         <div class="desc">CHICKEN ROLLS</div>
                     </a>
                 </div>
 
                 <div class="gallery">
-                    <a class="links" href="CHICKENBUCKETS.jpg">
-                        <img src="CHICKENBUCKETS.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/CHICKENBUCKETS.jpg">
+                        <img src="images/CHICKENBUCKETS.jpg" alt="" width="1px" class="image">
                         <div class="desc">CHICKEN BUCKETS</div>
                     </a>
                 </div> 
@@ -114,29 +114,29 @@
             <div class="cat-pictures">
 
                 <div class="gallery">
-                    <a class="links" href="BIRIYANIBUCKETS.jpg">
-                        <img src="BIRIYANIBUCKETS.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/BIRIYANIBUCKETS.jpg">
+                        <img src="images/BIRIYANIBUCKETS.jpg" alt="" width="1px" class="image">
                         <div class="desc">BIRIYANI BUCKETS</div>
                     </a>
                 </div>
 
                 <div class="gallery">
-                    <a class="links" href="BOXMEALS.jpg">
-                        <img src="BOXMEALS.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/BOXMEALS.jpg">
+                        <img src="images/BOXMEALS.jpg" alt="" width="1px" class="image">
                         <div class="desc">BOX MEALS</div>
                     </a>
                 </div>
 
                 <div class="gallery">
-                    <a class="links" href="BURGERS.jpg">
-                        <img src="BURGERS.jpg" alt="" width="1px" class="image">
+                    <a class="links" href="images/BURGERS.jpg">
+                        <img src="images/BURGERS.jpg" alt="" width="1px" class="image">
                         <div class="desc">BURGERS</div>
                     </a>
                 </div>
 
                 <div class="gallery">
-            <a class="links2" href="finger_lickin.fc21c805.svg">
-                        <img src="finger_lickin.fc21c805.svg" alt="" width="1px" class="image2">
+            <a class="links2" href="images/finger_lickin.fc21c805.svg">
+                        <img src="images/finger_lickin.fc21c805.svg" alt="" width="1px" class="image2">
                         <div class="desc">
                             View All Menu
                         <i class="fas fa-long-arrow-alt-right "></i>
@@ -175,7 +175,7 @@
             <div class="gallery3">
 
                 <div class="last-image">
-                <img src="CHKZINGER.jpg" width="1px" class="image3" alt="">
+                <img src="images/CHKZINGER.jpg" width="1px" class="image3" alt="">
                     <div class="desc3">
                     <h1>1 PC FREE CHICKEN..</h1>
                     <p>1 Pc free Chicken Zinger on a cart value of <br>499 or above on first order. Only for...</p>
@@ -186,7 +186,7 @@
                 </div>
 
             <div class="last-image">
-                <img src="BIGSAVE.jpg" width="1px" class="image3" alt="">
+                <img src="images/BIGSAVE.jpg" width="1px" class="image3" alt="">
                 <div class="desc3">
                     <h1>UPTO RS 100 OFF O...</h1>
                     <p>Upto Rs 100 off on min cart value of Rs 699 <br>or more. Applicable on 4th order onward...</p>
@@ -198,7 +198,7 @@
                 </div>
 
             <div class="last-image">
-                <img src="VEGZINGER.jpg" width="1px" class="image3" alt="">
+                <img src="images/VEGZINGER.jpg" width="1px" class="image3" alt="">
                 <div class="desc3">
                     <h1>1 PC FREE VEG...</h1>
                     <p>1 Pc free Veg Zinger on a cart value of 499 <br>or above on first order. Only for registere...</p>
@@ -259,13 +259,13 @@
                         <a href="">Find a KFC</a>
                     </div>
                     <div class="google-icon">
-                        <a href="google_play.svg">
-                        <img src="google_play.svg" alt="">
+                        <a href="images/google_play.svg">
+                        <img src="images/google_play.svg" alt="">
                         </a>
                     </div>
                     <div class="appstore-icon">
-                        <a href="apple.svg">
-                            <img src="apple.svg" alt="">
+                        <a href="images/apple.svg">
+                            <img src="images/apple.svg" alt="">
                         </a>
                     </div>
 
